--- a/package.json
+++ b/package.json
@@ -15,6 +15,13 @@
     "astro": "^1.0.5",
     "autoprefixer": "^10.4.8",
     "sass": "^1.54.4",
-    "svelte": "^3.49.0"
+    "svelte": "^3.59.2"
+  },
+  "dependencies": {
+    "flowbite": "^1.8.0",
+    "svelte-markdown": "^0.2.3",
+    "svelte-swipe": "^1.9.2",
+    "swiper": "^8.3.2",
+    "tailwindcss-scoped-groups": "^2.0.0"
   }
 }
